--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,17 @@
         <servlet-class>tictact0e.app.controller.LoginServlet</servlet-class>
     </servlet>
 
+    <servlet>
+        <display-name>RegistrationServlet</display-name>
+        <servlet-name>RegistrationServlet</servlet-name>
+        <servlet-class>tictact0e.app.controller.RegistrationServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>RegistrationServlet</servlet-name>
+        <url-pattern>/registration</url-pattern>
+    </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -54,7 +65,7 @@
     </resource-env-ref>
 
     <welcome-file-list>
-        <welcome-file>loginFrame.jsp</welcome-file>
+        <welcome-file>LoginFrame.jsp</welcome-file>
     </welcome-file-list>
 
 </web-app>
